# o1js-to-zkvm

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  e2e-test.sh  install.sh  package-lock.json  package.json  trace.json
.github/workflows/: ci.yml  e2e.yml  lint.yml  rust-test.yml
crates/o1-pickles-verifier/: Cargo.toml
crates/o1-pickles-verifier/src/: accumulator.rs  deferred.rs  lib.rs  messages.rs  pack.rs  parse.rs  serde_compat.rs  statement.rs  verify.rs  wire.rs
crates/o1-pickles-verifier/src/kimchi_input/: deferred.rs  messages.rs  mod.rs  pack.rs  prev_challenges.rs
crates/o1-pickles-verifier/src/parse/: lower.rs  mod.rs  wire.rs
crates/o1-pickles-verifier/tests/: accumulator_check.rs  dummy_wrap_sg.rs  expand_deferred_runs.rs  parse_proof_repr.rs  test_srs_load.rs  wire_msgpack_roundtrip.rs  wrap_debug_intermediates.rs  wrap_kimchi_verify.rs
crates/o1-verifier/: Cargo.toml  build.rs
crates/o1-verifier-host/: Cargo.toml  build.rs
crates/o1-verifier-host/src/: main.rs
crates/o1-verifier-lib/: Cargo.toml
crates/o1-verifier-lib/src/: lib.rs  parse.rs  pickles_error.rs  pickles_lowering.rs  pickles_parse.rs  pickles_types.rs  pickles_verify.rs  srs_layout.rs
crates/o1-verifier-lib/src/pickles_legacy/: mod.rs  simple_chain.rs
crates/o1-verifier-lib/src/pickles_mina_rust/: app_state.rs  messages.rs  mod.rs  prepared_statement.rs  proof_padding.rs  types.rs  verify.rs
crates/o1-verifier-lib/tests/: native_verify.rs  simple_chain_parse.rs  simple_chain_pickles.rs  srs_layout.rs
crates/o1-verifier/src/: main.rs
docs/: ARCHITECTURE.md  build-proj-and-run-e2e.md
fixtures/: proof.json  simple_chain_bundle.json  simple_chain_proof_repr.json  simple_chain_proof_repr_b0.json  simple_chain_proof_repr_b1.json  simple_chain_proof_repr_b2.json  simple_chain_proof_repr_b3.json  simple_chain_real_bundle.json  simple_chain_wrap_debug_intermediates.json  simple_chain_wrap_public_input.json
scripts/: inspect-simple-chain-bundle.sh  rust-e2e-test-profile.sh  rust-e2e-test.sh  rust-prove-cuda.sh  rust-prove.sh  ts-e2e-test.sh
src/: cli.ts
