[workspace]
resolver = "2"
members = ["crates/o1-verifier", "crates/o1-verifier-host", "crates/o1-verifier-lib"]
exclude = ["vendor/proof-systems"]

[workspace.dependencies]
kimchi = { path = "vendor/proof-systems/kimchi", default-features = false }
poly-commitment = { path = "vendor/proof-systems/poly-commitment", default-features = false }
mina-curves = { path = "vendor/proof-systems/curves", default-features = false }
mina-poseidon = { path = "vendor/proof-systems/poseidon", default-features = false }
groupmap = { path = "vendor/proof-systems/groupmap", default-features = false }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.2" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.2" }
sp1-build = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.2" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
ark-ff = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
bytemuck = { version = "1", default-features = false, features = ["derive"] }
