[package]
name = "o1-pickles-verifier"
version = "0.1.0"
edition = "2021"

[features]
std = ["serde_json"]

[dependencies]
o1-verifier-lib = { path = "../o1-verifier-lib" }
kimchi = { workspace = true }
poly-commitment = { workspace = true }
mina-curves = { workspace = true }
mina-poseidon = { workspace = true }
groupmap = { workspace = true }
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-poly = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
blake2 = { version = "0.10", default-features = false }
serde = { workspace = true }
serde_json = { version = "1", optional = true }
rmp-serde = { version = "1", default-features = false }
