[package]
name = "o1-pickles-verifier"
version = "0.1.0"
edition = "2021"

[features]
std = ["serde_json"]

[dependencies]
o1-verifier-lib = { path = "../o1-verifier-lib" }
kimchi = { workspace = true }
poly-commitment = { workspace = true }
mina-curves = { workspace = true }
mina-poseidon = { workspace = true }
groupmap = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
blake2 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
rmp-serde = { workspace = true }
