[package]
name = "o1-verifier-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "o1zkvm"
path = "src/main.rs"

[dependencies]
sp1-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1" }
rmp-serde = "1"
base64 = "0.13"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
mina-curves = { git = "https://github.com/o1-labs/proof-systems", rev = "878e3758ff6e81e708a11e4b0286908cecbb3dfa" }
ark-ff = { workspace = true, features = ["std"] }
ark-serialize = { workspace = true, features = ["std"] }

[build-dependencies]
sp1-build = { workspace = true }
