[package]
name = "o1-verifier-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
kimchi = { workspace = true }
poly-commitment = { workspace = true }
mina-curves = { workspace = true }
mina-poseidon = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
rmp-serde = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }

[dev-dependencies]
rmp-serde = { workspace = true }
