[package]
name = "o1-verifier-lib"
version = "0.1.0"
edition = "2021"

[features]
std = ["serde_json", "base64", "ark-ff", "ark-ff/std"]

[dependencies]
kimchi = { workspace = true }
poly-commitment = { workspace = true }
mina-curves = { workspace = true }
mina-poseidon = { workspace = true }
groupmap = { workspace = true }
serde = { workspace = true }
rmp-serde = { version = "1", default-features = false }
ark-serialize = { workspace = true }
rand = { version = "0.8", default-features = false }
bytemuck = { workspace = true }

# std-only deps for circuit JSON parsing
serde_json = { version = "1", optional = true }
base64 = { version = "0.13", optional = true }
ark-ff = { workspace = true, optional = true }

[dev-dependencies]
rand = "0.8"
rmp-serde = "1"
ark-ec = { workspace = true, features = ["std"] }
ark-ff = { workspace = true, features = ["std"] }
