[package]
name = "o1-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
o1-verifier-lib = { path = "../o1-verifier-lib" }
sp1-zkvm = { workspace = true }
rmp-serde = { version = "1", default-features = false }
rand = { version = "0.8", default-features = false }
mina-curves = { workspace = true, default-features = false }

[features]
default = []
# Routes Pasta Fp/Fq Montgomery multiplication through the SP1 zkVM
# sys_bigint precompile. Activated by o1-verifier-host's build.rs
# during the guest sub-build (`cargo build --features sp1` on
# o1-verifier), so the host workspace's mina-curves stays on the
# derive-specialized arithmetic.
sp1 = ["mina-curves/sp1"]

[build-dependencies]
o1-verifier-lib = { path = "../o1-verifier-lib", features = ["std"] }
